--- a/ansible/roles/bootstrap/setup-docker/tasks/main.yml
+++ b/ansible/roles/bootstrap/setup-docker/tasks/main.yml
@@ -1,8 +1,10 @@
 ---
-# tasks file for roles/bootstrap/install-docker
+# tasks file for roles/bootstrap/docker
 
 - name: Install Docker Pre-Requisites
-  apt: name={{ item }} update_cache=yes
+  apt:
+    name: "{{ item }}"
+    update_cache: yes
   with_items:
     - apt-transport-https
     - ca-certificates
@@ -10,14 +12,17 @@
     - software-properties-common
 
 - name: Add Docker GPG Key
-  apt_key: url=https://download.docker.com/linux/ubuntu/gpg
+  apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
 
 - name: Add Docker Repository
   apt_repository:
     repo: "deb https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
 
 - name: Install Docker-CE
-  apt: name=docker-ce
+  apt:
+    name: docker-ce
+    update_cache: yes
 
 - name: Add users to "docker" group
   user:
