--- a/ansible/roles/bootstrap/setup-docker/tasks/main.yml
+++ b/ansible/roles/bootstrap/setup-docker/tasks/main.yml
@@ -24,6 +24,11 @@
     name: docker-ce
     update_cache: yes
 
+- name: Ensure group "docker" exists
+  group:
+    name: docker
+    state: present
+
 - name: Add users to "docker" group
   user:
     name: "{{ item }}"
